--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,10 +1,16 @@
+* {
+  text-decoration: none;
+  color: inherit;
+}
+
 .sidebar {
   border-right: 1px solid var(--twitter-background);
-  flex: 0.3;
+  flex: 0.2;
   min-width: 250px;
   margin-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
+  text-decoration: none;
 }
 
 .sidebar__twitterIcon {
